# resume-ats

./: README.md  README.txt  app.py  pyproject.toml
static/: style.css
templates/: index.html
