[project]
name = "resume-ats"
version = "0.1.0"
description = "thi sproject about the ats score"
authors = [
    {name = "Subikson M"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
